--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>MOHAMED ABDULSALAM ELSHAHALY</h1>
     <p>anesthesia specialist</p>
+    <h2>alexandria university</h2>
     <img src="images/profile-pic.png" alt="profile-pic" height="600" width="600">
     <img src="https://images.unsplash.com/photo-1731902062633-1496d7bcf95c?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="nature" width="300">
     
